WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62051
V8Proxy::disconnectFrame doesn't do anything
https://bugs.webkit.org/show_bug.cgi?id=62051
Summary
V8Proxy::disconnectFrame doesn't do anything
WebKit Review Bot
Reported
2011-06-03 14:02:49 PDT
V8Proxy::disconnectFrame doesn't do anything Requested by abarth on #webkit.
Attachments
Patch
(2.25 KB, patch)
2011-06-03 15:09 PDT
,
Adam Barth
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Barth
Comment 1
2011-06-03 15:09:36 PDT
Created
attachment 95972
[details]
Patch
Eric Seidel (no email)
Comment 2
2011-06-03 15:37:43 PDT
Comment on
attachment 95972
[details]
Patch OK.
WebKit Review Bot
Comment 3
2011-06-04 02:22:40 PDT
Comment on
attachment 95972
[details]
Patch Clearing flags on attachment: 95972 Committed
r88100
: <
http://trac.webkit.org/changeset/88100
>
WebKit Review Bot
Comment 4
2011-06-04 02:22:45 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug