2011-06-04  Adam Barth  <abarth@webkit.org>

Reviewed by Eric Seidel.

        V8Proxy::disconnectFrame doesn't do anything
        https://bugs.webkit.org/show_bug.cgi?id=62051

        Dead code should die.

        * bindings/v8/ScriptController.cpp:
        (WebCore::ScriptController::~ScriptController):
        * bindings/v8/V8Proxy.cpp:
        * bindings/v8/V8Proxy.h:

Canonical link: https://commits.webkit.org/77552@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88100 268f45cc-cd09-0410-ab3c-d52691b4dbfc